// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareSnapshotModal renders with modal closed 1`] = `null`;

exports[`ShareSnapshotModal renders with modal open w/ known username 1`] = `
<div
  className="ReactModal__Overlay ReactModal__Overlay--after-open"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="ReactModal__Content ReactModal__Content--after-open ShareSnapshotModal"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <h2
      className="ShareSnapshotModal-title"
    >
      Share a Shapshot
    </h2>
    <div
      className="ShareSnapshotModal-pane"
    >
      <p>
        Get a link to a snapshot -- a browsable, sharable view of the current state of your Tilt session.
      </p>
      <section
        className="ShareSnapshotModal-shareLink"
      >
        <div
          className="ShareSnapshotModal-shareLink-urlBox"
        >
          <p
            className="ShareSnapshotModal-shareLink-url"
          >
            http://test.com
          </p>
        </div>
        <a
          className="ShareSnapshotModal-button"
          href="http://test.com"
          target="_blank"
        >
          Open
        </a>
      </section>
      <p
        className="ShareSnapshotModal-user"
      >
        Sharing as 
        <strong>
          tacocat
        </strong>
      </p>
    </div>
    <div
      className="ShareSnapshotModal-pane"
    >
      <p>
        Manage your snapshots on
         
        <a
          href="https://cloud.tilt.dev/snapshots"
          target="_blank"
        >
          TiltCloud
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`ShareSnapshotModal renders with modal open w/o known username 1`] = `
<div
  className="ReactModal__Overlay ReactModal__Overlay--after-open"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="ReactModal__Content ReactModal__Content--after-open ShareSnapshotModal"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <h2
      className="ShareSnapshotModal-title"
    >
      Share a Shapshot
    </h2>
    <div
      className="ShareSnapshotModal-pane"
    >
      <p>
        Get a link to a snapshot -- a browsable, sharable view of the current state of your Tilt session.
      </p>
      <section
        className="ShareSnapshotModal-shareLink"
      >
        <div
          className="ShareSnapshotModal-shareLink-urlBox"
        >
          <p
            className="ShareSnapshotModal-shareLink-url"
          >
            http://test.com
          </p>
        </div>
        <a
          className="ShareSnapshotModal-button"
          href="http://test.com"
          target="_blank"
        >
          Open
        </a>
      </section>
      <p
        className="ShareSnapshotModal-user"
      >
        Sharing as 
        <strong>
          [anonymous user]
        </strong>
      </p>
    </div>
    <div
      className="ShareSnapshotModal-pane"
    >
      <section>
        <p>
          Connect Tilt to TiltCloud to share under your name and manage your snapshots.
        </p>
        <form
          action="https://cloud.tilt.dev/start_register_token"
          className="ShareSnapshotModal-tiltCloudButtonForm"
          method="POST"
          onSubmit={[Function]}
          target="_blank"
        >
          <p>
            You'll need a GitHub account
          </p>
          <span
            className="ShareSnapshotModal-tiltCloudButtonForm-spacer"
          />
          <input
            className="ShareSnapshotModal-tiltCloudButton"
            type="submit"
            value="Connect to TiltCloud"
          />
          <input
            name="token"
            type="hidden"
          />
        </form>
      </section>
    </div>
  </div>
</div>
`;

exports[`ShareSnapshotModal renders without snapshotUrl 1`] = `
<div
  className="ReactModal__Overlay ReactModal__Overlay--after-open"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="ReactModal__Content ReactModal__Content--after-open ShareSnapshotModal"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <h2
      className="ShareSnapshotModal-title"
    >
      Share a Shapshot
    </h2>
    <div
      className="ShareSnapshotModal-pane"
    >
      <p>
        Get a link to a snapshot -- a browsable, sharable view of the current state of your Tilt session.
      </p>
      <section
        className="ShareSnapshotModal-shareLink"
      >
        <div
          className="ShareSnapshotModal-shareLink-urlBox"
        >
          <p
            className="ShareSnapshotModal-shareLink-placeholder"
          >
            No Link Generated Yet
          </p>
        </div>
        <button
          className="ShareSnapshotModal-button"
          onClick={[Function]}
        >
          Get Link
        </button>
      </section>
      <p
        className="ShareSnapshotModal-user"
      >
        Sharing as 
        <strong>
          [anonymous user]
        </strong>
      </p>
    </div>
    <div
      className="ShareSnapshotModal-pane"
    >
      <section>
        <p>
          Connect Tilt to TiltCloud to share under your name and manage your snapshots.
        </p>
        <form
          action="https://cloud.tilt.dev/start_register_token"
          className="ShareSnapshotModal-tiltCloudButtonForm"
          method="POST"
          onSubmit={[Function]}
          target="_blank"
        >
          <p>
            You'll need a GitHub account
          </p>
          <span
            className="ShareSnapshotModal-tiltCloudButtonForm-spacer"
          />
          <input
            className="ShareSnapshotModal-tiltCloudButton"
            type="submit"
            value="Connect to TiltCloud"
          />
          <input
            name="token"
            type="hidden"
          />
        </form>
      </section>
    </div>
  </div>
</div>
`;
